--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1",
-    "nodemailer": "^6.7.0",
-    "sanitize-html": "^2.5.2"
+    "cookie": "^0.4.1"
   }
 }
